# antisat

./: .gitignore  .vimspector.json  CMakeLists.txt  CellContainer.h  Constraints.C  Constraints.h  Global.h  Heap.h  LICENSE  Main.C  Makefile  OutOrder.h  README  README~  Solver.C  Solver.h  SolverTypes.h  SubQ.h  SupQ.C  SupQ.h  Trie.C  Trie.h  VarOrder.h  bench.sh  benchtags9.csv  benchtags_afacomp.csv  benchtags_sat_small2.csv  build9.sh  build_afacomp.sh  build_all.py  build_all_sat.py  check_assignment.py  check_results.py  check_valgrind.py  compare_benches.py  compile.sh  measure.py  measure2.py  measure3.py  measure4.py  (+19 more)
.vim/: coc-settings.json
schema/: CnfAfa.capnp  cnfafa.capnp
src/afaminisat/: CellContainer.h  CnfAfa.capnp.C  CnfAfa.capnp.h  Constraints.C  Constraints.h  Global.h  LogList.C  LogList.h  Main.C  MainAfa.C  MainSat.C  Solver.C  Solver.h  SolverTypes.h  SupQ.C  Test.C  Trie.C  Trie.h  TrieOnSat.C  VarOrder.C  VarOrder.h
src/afaminisat/finish_varorder/: VarOrder.C  VarOrder.h
src/afaminisat/old_varorder/: VarOrder.h
src/afaminisat/watch_varorder/: VarOrder.C  VarOrder.h
test/: a1.afa  a1.afasat  a1.antisat  a2.afa  a2.afasat  a2.antisat  a3.afa  a3.afasat  a3.antisat  a4.afa  a4.afasat  a4.antisat  a5.afasat  a5.txt  a6.afa  c2.cnf  c3.cnf  c4.cnf  c5.cnf  inclusion-sat-1.afasat  inclusion-sat-10.afasat  inclusion-unsat-1.afasat  ltl01.afasat  ltl02.afasat  ltl07.afasat  ltl08.afasat  ltl09.afasat  ltl10.afasat  ltl11.afasat  ltl12.afasat  ltl13.afasat  ltl14.afasat  ltl3.afasat  ltl4.afasat  ltl5.afasat  ltl6.afasat
